Agregado de SASSII y SEO

--- a/sass/estilosSass.scss
+++ b/sass/estilosSass.scss
@@ -51,3 +51,29 @@
         transition: height 2s;
     }
 }
+
+$colors: (
+    Instagram: #55acee,
+    facebook:  #3a5795,
+    Twitter: #C25E30
+);
+
+@each $name-color, $bgcolor in $colors {
+    .#{$name-color} {
+        background-color: $bgcolor;
+    }
+}
+
+@mixin sizes($width, $height) {
+    height: $height;
+    width: $width;
+}
+
+.newsletter__footer{
+    @include sizes(500px, 50px)
+}
+
+.banner__categories{
+    @extend .header__menu1;
+    background-color: #55acee;
+}
